# cdls

./: .gitignore  INSTALL.txt  README.md  README.txt  TODO.txt  build.cpp  config.json  git_push.ps1  install.sh.save  main.ps1  make_wsl.sh
CMake/: CMakeLists.txt  get_version.py
CPP/src/: main.cpp  make.ps1
cdls/: README.txt
cdls/wrappers/PowerShell/: console.ps1
cdls/wrappers/Python/: cdls.py
install/: README  lin_install.sh  lin_make.sh  make_wsl.sh  make_wsl.sh.save  win_install.ps1  win_make.ps1  win_uninstall.ps1
scripts/: powershell_native.ps1
sh/: cdls.sh
src/: archive.cpp  dad.cpp  grandad.cpp  main.cpp  make.ps1  simt.py
test/: c_extend.py
wrappers/PowerShell/: cdls.ps1  console.ps1  hook.ps1  old_console.ps1
wrappers/Python/: .config  cdls.py  main.py  old_cdls.py
wrappers/bash/: wrapper.sh
wrappers/python/: shell_interact.py
